@@ -28,3 +28,16 @@ AC_DEFUN([GNOME_DEBUG_CHECK],
 		[Enable additional debugging at the expense of performance and size])
 	fi
 ])
+
+dnl AM_DISABLE_DEPRECATED ()
+dnl define DISABLE_DEPRECATED
+dnl
+AC_DEFUN([AM_DISABLE_DEPRECATED],
+[
+	if test $USE_MAINTAINER_MODE = yes; then
+		DISABLE_DEPRECATED="-DG_DISABLE_DEPRECATED -DGDK_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED -DGNOME_DISABLE_DEPRECATED -DPANGO_DISABLE_DEPRECATED -DBONOBO_DISABLE_DEPRECATED"
+	else
+		DISABLE_DEPRECATED=""
+	fi
+	AC_SUBST(DISABLE_DEPRECATED)
+])
