@@ -1,3 +1,8 @@
+2003-10-31    <clahey@ximian.com>
+
+	* gnome-common.m4: New macro to disable deprecated functions when
+	maintainer mode is on.
+
 2003-08-10  Malcolm Tredinnick <malcolm@commsecure.com.au>
 
 	* autogen.sh: Show the version found for the various build tools
